fix classLoader bug with overlapping class names in different coach libs