@@ -32,8 +32,6 @@ import java.util.Base64;
 public final class CacheFactory {
   private CacheFactory() {}
 
-  private static LibraryClassLoader classLoader = new LibraryClassLoader(Thread.currentThread().getContextClassLoader());
-
   /**
    * Creates a mapper for a generated jaxb2 class.
    *
@@ -82,11 +80,12 @@ public final class CacheFactory {
       throws LibraryException {
     try {
       byte[] decoded = Base64.getDecoder().decode(lib.getValue());
+      LibraryClassLoader classLoader = new LibraryClassLoader(parent);
       classLoader.loadJar(decoded);
       // The id of the library must be the FQCN of the class
       Class<?> libraryClass = classLoader.findClass(lib.getId());
       // Instantiate the class and give it a reference to the questionnaire
-      return (CoachLibrary) libraryClass.newInstance();
+      return (CoachLibrary) libraryClass.getConstructor().newInstance();
     } catch (Exception e) {
       throw new LibraryException(lib, e.getMessage());
     }
